force-app/main/default/objects/FlexPoints_Transactions__c/FlexPoints_Transactions__c.object-meta.xml
<CustomObject>
    <label>FlexPoints Transactions</label>
    <nameField>
        <displayFormat>FPT-{0000}</displayFormat>
        <label>FlexPoints Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlexPoints Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>