force-app/main/default/objects/FlexPoints_Transactions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup field so the permissions can be controlled independently from the account record. If roll ups are required then we can use managed package or apex class</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FlexPoints Transactions</relationshipLabel>
    <relationshipName>FlexPoints_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>