force-app/main/default/objects/FlexPoints_Transactions__c/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <description>18 digit ID from the associated Account record</description>
    <formula>Account__r.AccountID18__c</formula>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>