force-app/main/default/objects/FlexPoints_Transactions__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Mirror field of the Account Number from the associated Account record</description>
    <formula>Account__r.AccountNumber</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>