force-app/main/default/objects/FlexPoints_Transactions__c/fields/Cancelled_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Service_Name__c</fullName>
    <label>Cancelled Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>