force-app/main/default/objects/FlexPoints_Transactions__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of this transaction period. Either set manually or when generated through the integration</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>