force-app/main/default/objects/FlexPoints_Transactions__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for when a transaction is an expiry calculation</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>