force-app/main/default/objects/FlexPoints_Transactions__c/fields/FlexPoint_Redemption_Case__c.field-meta.xml
<CustomField>
    <fullName>FlexPoint_Redemption_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case that is associated with this particular redemption request.</description>
    <label>FlexPoint Redemption Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>FlexPoints Redemption</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FlexPoints Transactions</relationshipLabel>
    <relationshipName>FlexPoints_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>