force-app/main/default/objects/FlexPoints_Transactions__c/fields/FlexPoints_Contract__c.field-meta.xml
<CustomField>
    <fullName>FlexPoints_Contract__c</fullName>
    <description>Text field, aligns to the contract where this purchase resides</description>
    <label>FlexPoints Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>