force-app/main/default/objects/FlexPoints_Transactions__c/fields/FlexPoints_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>FlexPoints_Integration_ID__c</fullName>
    <description>Populated from FlexPoints table through the integration</description>
    <label>FlexPoints Integration ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>