force-app/main/default/objects/FlexPoints_Transactions__c/fields/FlexPoints_Year__c.field-meta.xml
<CustomField>
    <fullName>FlexPoints_Year__c</fullName>
    <description>Populated through integration from table</description>
    <label>FlexPoints Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>