force-app/main/default/objects/FlexPoints_Transactions__c/fields/One_Off_Purchase__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated through integration from table</description>
    <label>One Off Purchase</label>
    <type>Checkbox</type>
</CustomField>