force-app/main/default/objects/FlexPoints_Transactions__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>The number of points being added or subtracted from a customer&apos;s points balance. Value can be positive (+) or negative (-)</description>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>