force-app/main/default/objects/FlexPoints_Transactions__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>Mirror of the related case record status field</description>
    <formula>TEXT( FlexPoint_Redemption_Case__r.Status )</formula>
    <inlineHelpText>Mirror view of the Request Status on the related Case record. This is a customer facing field</inlineHelpText>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>