force-app/main/default/objects/FlexPoints_Transactions__c/fields/Request_Subject__c.field-meta.xml
<CustomField>
    <fullName>Request_Subject__c</fullName>
    <description>Mirror of the subject field on the associated case record</description>
    <formula>FlexPoint_Redemption_Case__r.Subject</formula>
    <label>Request Subject</label>
    <type>Text</type>
</CustomField>