force-app/main/default/objects/FlexPoints_Transactions__c/fields/Sales_Handover_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Handover_Number__c</fullName>
    <description>Populated through integration from table</description>
    <label>Sales Handover Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>