force-app/main/default/objects/FlexPoints_Transactions__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Populated through integration from table</description>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>