force-app/main/default/objects/FlexPoints_Transactions__c/fields/SME_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SME_Contract_Number__c</fullName>
    <description>Populated through integration from table</description>
    <label>SME Contract Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>