force-app/main/default/objects/FlexPoints_Transactions__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of this transaction period. Either set manually or when generated through the integration</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>