force-app/main/default/objects/FlexPoints_Transactions__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether or not the transaction has commenced based on the start date.</description>
    <label>Started</label>
    <type>Checkbox</type>
</CustomField>