force-app/main/default/objects/FlexPoints_Transactions__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>If the transaction has the &apos;Expired&apos; checkbox checked, the status is &apos;Expired&apos;

If the transaction type is NOT &apos;Redemption&apos;, the status is &apos;Top Up&apos;

Otherwise the status is = Transaction_Status__c</description>
    <formula>IF (Expired__c, &apos;Expired&apos;,
IF (NOT(ISPICKVAL(Type__c, &apos;Redemption&apos;)), &apos;Top Up&apos;,  TEXT(Transaction_Status__c)))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>