force-app/main/default/objects/FlexPoints_Transactions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FlexPoint_Redemption_Case__c</columns>
    <columns>Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>startsWith</operation>
        <value>Pacson</value>
    </filters>
    <label>All</label>
</ListView>