force-app/main/default/objects/FlexPoints_Transactions__c/listViews/Completed_Transactions.listView-meta.xml
<ListView>
    <fullName>Completed_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FlexPoint_Redemption_Case__c</columns>
    <columns>Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Points__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed Transactions</label>
</ListView>