force-app/main/default/objects/FlexPoints_Transactions__c/listViews/Expired_Transactions.listView-meta.xml
<ListView>
    <fullName>Expired_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Points__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/5/2022</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Expired Transactions</label>
</ListView>