force-app/main/default/objects/FlexPoints_Transactions__c/listViews/expiry_points.listView-meta.xml
<ListView>
    <fullName>expiry_points</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Expired__c</columns>
    <columns>Account__c</columns>
    <columns>Points__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Expired Points</label>
</ListView>