force-app/main/default/objects/FlexPoints_Transactions__c/listViews/Soon_To_Expire_Transactions_5_1_31_1.listView-meta.xml
<ListView>
    <fullName>Soon_To_Expire_Transactions_5_1_31_1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Points__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>2/1/2022</value>
    </filters>
    <filters>
        <field>Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/5/2022</value>
    </filters>
    <label>Soon To Expire Transactions 5/1 - 31/1</label>
</ListView>