force-app/main/default/objects/FlexPoints_Transactions__c/listViews/X0_Point_Premier_Uploads.listView-meta.xml
<ListView>
    <fullName>X0_Point_Premier_Uploads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Points__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Premier</value>
    </filters>
    <filters>
        <field>Points__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>0 Point Premier Uploads</label>
</ListView>